# NotRanged.github.io

./: .gitignore  index.html  package.json  server.js
app/: index.html  index.html.packed
app/js/: actions.js  ffxivcraftmodel.js  moduleworkerspolyfill.js
app/js/controllers/: main.js
app/js/services/: actions.js  simulator.js
app/js/solver/: service.js  wasmworker.js  worker.js
app/lib/pkg/: package.json  xiv_crafting_sim.d.ts  xiv_crafting_sim.js  xiv_crafting_sim_bg.wasm  xiv_crafting_sim_bg.wasm.d.ts
app/lib/xiv-craft-simulator/: README.md  package.json  xiv_crafting_sim.js  xiv_crafting_sim_bg.wasm
app/lib/xiv-thread-simd/: xiv_crafting_sim.d.ts  xiv_crafting_sim.js  xiv_crafting_sim_bg.wasm  xiv_crafting_sim_bg.wasm.d.ts
app/lib/xiv-thread-simulator/: xiv_crafting_sim.d.ts  xiv_crafting_sim.js  xiv_crafting_sim_bg.wasm
app/locale/: en.json
app/views/: simulator.html
xiv-crafting-sim/: Cargo.toml  Makefile  rust-toolchain
xiv-crafting-sim/benches/: fitness.rs  simulator.rs
xiv-crafting-sim/src/: actions.rs  effect_tracker.rs  genome.rs  level_table.rs  lib.rs  mutator.rs  simulator.rs  solver.rs  xiv_model.rs
