[package]
name = "xiv-crafting-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.dev]
opt-level = 3

[profile.bench]
debug = true

[features]
wasm-thread = ["wasm-bindgen-rayon", "rayon"]
wasm-no-thread = ["genevo/wasm-bindgen"]

[dependencies]
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"]}
serde = {version = "1.0.131", features = ["derive"]}
genevo = {version = "0.7"}
wasm-bindgen-rayon = {version = "1.0.3", features = ["no-bundler"], optional = true}
rayon = {version  = "1.5.1", optional = true}
smallvec = "1.7.0"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.73"
btree-slab = "0.2.1"

[dev-dependencies]
criterion = "0.3"
rand = {version = "0.8.4", features = ["small_rng"]}

[[bench]]
name = "fitness"
harness = false

[[bench]]
name = "simulator"
harness = false
