[package]
name = "xiv-crafting-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.dev]
opt-level = 0

[profile.bench]
debug = true

[features]
thread = ["rayon", "genevo/multithread"]
wasm-thread = ["wasm-bindgen-rayon", "thread"]
wasm-genevo = ["genevo/wasm-bindgen"]

[dependencies]
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"]}
serde = {version = "1", features = ["derive"]}
genevo = {git = "https://github.com/akarras/genevo", default-features = false, branch = "wasm-threads", features = ["smallvec"]}
wasm-bindgen-rayon = {version = "1.0.3", features = ["no-bundler"], optional = true}
rayon = {version  = "1", optional = true}
console_error_panic_hook = "0.1.7"
serde_json = "1.0.73"
itertools = "0.10.3"
smallvec = "1.9.0"

[dev-dependencies]
criterion = "0.3"
rand = {version = "0.8.4", features = ["small_rng"]}

[[bench]]
name = "fitness"
harness = false

[[bench]]
name = "simulator"
harness = false
